--- a/style.css
+++ b/style.css
@@ -1,8 +1,28 @@
+@font-face {
+    font-family: eckmann;
+    src: url("./Eckmann.ttf");
+}
 body {
   margin: 0px;
   max-width: 30rem;
   display: flex;
   flex-direction: column;
+  background-color: #d1d2d4;
+}
+h1,h2,h3,h4,h5,h6{
+  font-family: 'eckmann', Courier, monospace;
+  text-align: center;
+  
+}
+
+.banner-img{
+  background: url("./banner.jpg");
+  height: 40vh;
+  width: 100vw;
+  user-select: none;
+    background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
 }
 
 .buttons {
@@ -32,6 +52,7 @@ iframe {
   top: 0;
   width: 100%;
   height: 100%;
+  border: none;
 }
 
 .say-hi-button {
@@ -55,4 +76,5 @@ iframe {
   background-color: #202020;
   user-select: none;
   border-radius: 0.5rem;
+  z-index: 5;
 }
