--- a/style.css
+++ b/style.css
@@ -12,12 +12,15 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #d1d2d4;
-font-family: 'et';
 }
 h1,h2,h3,h4,h5,h6{
   font-family: 'eckmann', Courier, monospace;
   text-align: center;
   
+}
+
+p {
+  font-family: 'et';
 }
 
 .banner-img{
