--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #d1d2d4;
+  background: url('./gray.jpg');
 }
 h1,
 h2,
@@ -28,6 +28,11 @@ h5,
 h6 {
   font-family: 'eckmann', Courier, monospace;
   text-align: center;
+}
+
+.camera-scene {
+  position: fixed;
+  top: 0;
 }
 
 p {
@@ -57,11 +62,34 @@ p {
   z-index: 10;
 }
 
+.circle {
+  background-color: rgb(223, 223, 223);
+  box-shadow: 4px 4px 9px 4px rgba(0, 0, 0, 0.25);
+  padding: 3rem;
+  margin: 1.5rem;
+  border-radius: 50%;
+  user-select: none;
+}
+
+.found {
+  background-color: yellow;
+}
+
+.collectables {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 footer {
-  position: absolute;
+  position: sticky;
   bottom: 0;
   width: 100%;
   z-index: 3;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 footer > * {
   width: 100%;
@@ -97,4 +125,34 @@ iframe {
   user-select: none;
   border-radius: 0.5rem;
   z-index: 5;
+}
+.testbtn {
+  z-index: 55;
+  position: absolute;
+  top: 0%;
+  left: 10rem;
+}
+
+.top-overlay {
+  font-size: 3rem;
+  font-family: 'eckmann', Courier, monospace;
+  width: 100%;
+  z-index: 55;
+  position: absolute;
+  top: 0;
+  left: 0vw;
+  background: url('./gray.jpg');
+  padding: 2rem 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.flipped-corner {
+  transform: scaleX(-1);
 }
