--- a/public/style.css
+++ b/public/style.css
@@ -10,15 +10,17 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  --white: rgb(243, 243, 243);
+  --brad: 0.15rem;
 }
 body {
   margin: 0px;
-  max-width: 30rem;
+  max-width: 45rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: url('./gray.jpg');
+  background: url('./bg.png');
 }
 h1,
 h2,
@@ -42,7 +44,7 @@ p {
 
 .banner-img {
   background: url('./banner.jpg');
-  height: 40vh;
+  height: 10vh;
   width: 100vw;
   user-select: none;
   background-position: center; /* Center the image */
@@ -61,24 +63,75 @@ p {
   align-items: center;
   z-index: 10;
 }
+main {
+  /* padding-top: 10rem;
+  border-radius: 50% 50% 0 0; */
+  background-color: white;
+  border-radius: var(--brad);
+  width: 90%;
+}
+h1 {
+  font-size: 2.6rem;
+  position: relative;
+  color: white;
+  /* bottom: 10rem; */
+}
 
-.circle {
-  background-color: rgb(223, 223, 223);
-  box-shadow: 4px 4px 9px 4px rgba(0, 0, 0, 0.25);
-  padding: 3rem;
+.collectible {
+  background-color: var(--white);
+  box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.25);
+  padding: 2rem;
+  width: 2rem;
+  height: 2rem;
   margin: 1.5rem;
   border-radius: 50%;
   user-select: none;
+  font-size: 1rem;
+  border: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.collectible:hover {
+  transform: scale(1.1);
+  transition: all 70ms ease-in-out;
+  box-shadow: 3px 3px 1px 1px rgba(0, 0, 0, 0.25);
+}
+
+.collectible:active {
+  transform: scale(0.9);
 }
 
 .found {
   background-color: yellow;
 }
 
-.collectables {
+.collectibles {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+#collectible-info {
+  min-width: 90vw;
+  min-height: 30vh;
+  position: absolute;
+  top: 10vh;
+  background-color: var(--white);
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 0.15rem;
+  filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.419));
+}
+
+.--hidden {
+  visibility: hidden;
+}
+.collectible-info-image {
+  width: 15rem;
+  height: 18rem;
 }
 
 footer {
