--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -73,7 +73,8 @@ main {
 h1 {
   font-size: 2.6rem;
   position: relative;
-  color: white;
+  color: rgb(0, 0, 0);
+  background-color: white;
   /* bottom: 10rem; */
 }
 
