item panel tweaks, check script path

--- a/assets/style.css
+++ b/assets/style.css
@@ -127,13 +127,25 @@ main {
 #collectible-info {
   min-width: 90vw;
   min-height: 30vh;
-  position: absolute;
-  top: 10vh;
+  position: relative;
+  bottom: 50vh;
   background-color: var(--white);
   margin: 1rem;
   padding: 1rem;
   border-radius: 0.15rem;
   filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.419));
+}
+#collectible-info > button {
+  padding: 0.6rem;
+  width: 3rem;
+  height: 3rem;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
 }
 
 .--hidden {
