--- a/client/public/assets/ar-style.css
+++ b/client/public/assets/ar-style.css
@@ -57,15 +57,6 @@ p {
   font-size: 1.3rem;
 }
 
-.banner-img {
-  background: url('./banner.jpg');
-  height: 15vh;
-  width: 100vw;
-  user-select: none;
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
-}
 h1 {
   font-size: 2.86rem;
   position: relative;
@@ -183,19 +174,25 @@ iframe {
 }
 
 .top-overlay {
-  font-size: 3rem;
+  font-size: 2rem;
   font-family: 'eckmann', Courier, monospace;
   width: 100%;
   z-index: 55;
   position: absolute;
   top: 0;
-  left: 0vw;
+  height: 10vh;
+  left: 50%;
+  transform: translateX(-50%);
   background: url('./gray.jpg');
-  padding: 2rem 1rem;
+  padding: 0 1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+.top-overlay>img{
+  height: 3rem;
+
 }
 
 .hidden {
