--- a/client/public/assets/ar-style.css
+++ b/client/public/assets/ar-style.css
@@ -45,10 +45,10 @@ h6 {
   text-align: center;
 }
 
-.camera-scene {
+/* .camera-scene {
   position: fixed;
   top: 0;
-}
+} */
 #camera-toggle-button {
   position: absolute;
   height: fit-content;
@@ -63,6 +63,9 @@ h6 {
 #camera-toggle-button > * {
   width: 6rem;
   height: 6rem;
+}
+.interaction-button {
+  z-index: 555;
 }
 
 p {
@@ -89,45 +92,6 @@ main {
   padding: 0 1.6rem;
 }
 
-.collectible {
-  background-color: var(--white);
-  box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.25);
-  padding: 2rem;
-  width: 2rem;
-  height: 2rem;
-  margin: 1.5rem;
-  border-radius: 50%;
-  user-select: none;
-  font-size: 1rem;
-  border: none;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  opacity: 0.2;
-}
-.collectible:hover {
-  transform: scale(1.1);
-  transition: all 70ms ease-in-out;
-  box-shadow: 3px 3px 1px 1px rgba(0, 0, 0, 0.25);
-}
-
-.collectible:active {
-  transform: scale(0.9);
-}
-
-.--found {
-  opacity: 1;
-  background-color: yellow;
-}
-
-.collectibles {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
 #collectible-info {
   min-width: 90vw;
   min-height: 30vh;
@@ -150,11 +114,11 @@ main {
 }
 
 iframe {
-  position: absolute;
+  /* position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
-  border: none;
+  border: none; */
 }
 
 .say-hi-button {
