Fix iframe aspect ratio issues

--- a/client/public/assets/ar-style.css
+++ b/client/public/assets/ar-style.css
@@ -67,6 +67,9 @@ h6 {
 .interaction-button {
   z-index: 555;
 }
+#collect-button {
+  z-index: 555;
+}
 
 p {
   font-family: 'et', 'Times New Roman', Times, serif;
@@ -111,14 +114,6 @@ main {
 .collectible-info-image {
   width: 15rem;
   height: 18rem;
-}
-
-iframe {
-  /* position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  border: none; */
 }
 
 .say-hi-button {
